// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot passwordless default 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div
      className="sc-AxirZ sc-AxiKw fAiBCP"
    >
      passwordless.intro
    </div>
    <form
      className="sc-fzozJi ffOmCE"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="sc-fzplWN bsaalQ"
      >
        <label
          className="sc-fzpans kcjhCB"
          htmlFor="email"
        >
          email
        </label>
        <input
          className="sc-fznyAO eZfilo"
          data-testid="email"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="email"
          readOnly={false}
          required={true}
          title="email"
          type="email"
          value=""
        />
      </div>
      <button
        className="sc-AxmLO cAXkkm"
        data-testid="submit"
        disabled={false}
        type="submit"
      >
        send
      </button>
    </form>
  </div>
</div>
`;

exports[`Snapshot passwordless no intro 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <form
      className="sc-fzozJi ffOmCE"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="sc-fzplWN bsaalQ"
      >
        <label
          className="sc-fzpans kcjhCB"
          htmlFor="email"
        >
          email
        </label>
        <input
          className="sc-fznyAO eZfilo"
          data-testid="email"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="email"
          readOnly={false}
          required={true}
          title="email"
          type="email"
          value=""
        />
      </div>
      <button
        className="sc-AxmLO cAXkkm"
        data-testid="submit"
        disabled={false}
        type="submit"
      >
        send
      </button>
    </form>
  </div>
</div>
`;

exports[`Snapshot passwordless sms 1`] = `
<div
  className="sc-Axmtr jBZtfl"
>
  <div>
    <div
      className="sc-AxirZ sc-AxiKw fAiBCP"
    >
      passwordless.sms.intro
    </div>
    <form
      className="sc-fzozJi ffOmCE"
      noValidate={true}
      onSubmit={[Function]}
    >
      <div
        className="sc-fzplWN bsaalQ"
      >
        <label
          className="sc-fzpans kcjhCB"
          htmlFor="phone_number"
        >
          phoneNumber
        </label>
        <div
          className="PhoneInput"
        >
          <div
            className="PhoneInputCountry"
          >
            <select
              aria-label="Phone number country"
              className="PhoneInputCountrySelect"
              name="phone_numberCountry"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              value="ZZ"
            >
              <option
                disabled={false}
                value="ZZ"
              >
                International
              </option>
              <option
                disabled={false}
                value="AF"
              >
                Afghanistan
              </option>
              <option
                disabled={false}
                value="AX"
              >
                Åland Islands
              </option>
              <option
                disabled={false}
                value="AL"
              >
                Albania
              </option>
              <option
                disabled={false}
                value="DZ"
              >
                Algeria
              </option>
              <option
                disabled={false}
                value="AS"
              >
                American Samoa
              </option>
              <option
                disabled={false}
                value="AD"
              >
                Andorra
              </option>
              <option
                disabled={false}
                value="AO"
              >
                Angola
              </option>
              <option
                disabled={false}
                value="AI"
              >
                Anguilla
              </option>
              <option
                disabled={false}
                value="AG"
              >
                Antigua and Barbuda
              </option>
              <option
                disabled={false}
                value="AR"
              >
                Argentina
              </option>
              <option
                disabled={false}
                value="AM"
              >
                Armenia
              </option>
              <option
                disabled={false}
                value="AW"
              >
                Aruba
              </option>
              <option
                disabled={false}
                value="AC"
              >
                Ascension Island
              </option>
              <option
                disabled={false}
                value="AU"
              >
                Australia
              </option>
              <option
                disabled={false}
                value="AT"
              >
                Austria
              </option>
              <option
                disabled={false}
                value="AZ"
              >
                Azerbaijan
              </option>
              <option
                disabled={false}
                value="BS"
              >
                Bahamas
              </option>
              <option
                disabled={false}
                value="BH"
              >
                Bahrain
              </option>
              <option
                disabled={false}
                value="BD"
              >
                Bangladesh
              </option>
              <option
                disabled={false}
                value="BB"
              >
                Barbados
              </option>
              <option
                disabled={false}
                value="BY"
              >
                Belarus
              </option>
              <option
                disabled={false}
                value="BE"
              >
                Belgium
              </option>
              <option
                disabled={false}
                value="BZ"
              >
                Belize
              </option>
              <option
                disabled={false}
                value="BJ"
              >
                Benin
              </option>
              <option
                disabled={false}
                value="BM"
              >
                Bermuda
              </option>
              <option
                disabled={false}
                value="BT"
              >
                Bhutan
              </option>
              <option
                disabled={false}
                value="BO"
              >
                Bolivia
              </option>
              <option
                disabled={false}
                value="BQ"
              >
                Bonaire, Sint Eustatius and Saba
              </option>
              <option
                disabled={false}
                value="BA"
              >
                Bosnia and Herzegovina
              </option>
              <option
                disabled={false}
                value="BW"
              >
                Botswana
              </option>
              <option
                disabled={false}
                value="BR"
              >
                Brazil
              </option>
              <option
                disabled={false}
                value="IO"
              >
                British Indian Ocean Territory
              </option>
              <option
                disabled={false}
                value="BN"
              >
                Brunei Darussalam
              </option>
              <option
                disabled={false}
                value="BG"
              >
                Bulgaria
              </option>
              <option
                disabled={false}
                value="BF"
              >
                Burkina Faso
              </option>
              <option
                disabled={false}
                value="BI"
              >
                Burundi
              </option>
              <option
                disabled={false}
                value="KH"
              >
                Cambodia
              </option>
              <option
                disabled={false}
                value="CM"
              >
                Cameroon
              </option>
              <option
                disabled={false}
                value="CA"
              >
                Canada
              </option>
              <option
                disabled={false}
                value="CV"
              >
                Cape Verde
              </option>
              <option
                disabled={false}
                value="KY"
              >
                Cayman Islands
              </option>
              <option
                disabled={false}
                value="CF"
              >
                Central African Republic
              </option>
              <option
                disabled={false}
                value="TD"
              >
                Chad
              </option>
              <option
                disabled={false}
                value="CL"
              >
                Chile
              </option>
              <option
                disabled={false}
                value="CN"
              >
                China
              </option>
              <option
                disabled={false}
                value="CX"
              >
                Christmas Island
              </option>
              <option
                disabled={false}
                value="CC"
              >
                Cocos (Keeling) Islands
              </option>
              <option
                disabled={false}
                value="CO"
              >
                Colombia
              </option>
              <option
                disabled={false}
                value="KM"
              >
                Comoros
              </option>
              <option
                disabled={false}
                value="CG"
              >
                Congo
              </option>
              <option
                disabled={false}
                value="CD"
              >
                Congo, Democratic Republic of the
              </option>
              <option
                disabled={false}
                value="CK"
              >
                Cook Islands
              </option>
              <option
                disabled={false}
                value="CR"
              >
                Costa Rica
              </option>
              <option
                disabled={false}
                value="CI"
              >
                Cote d'Ivoire
              </option>
              <option
                disabled={false}
                value="HR"
              >
                Croatia
              </option>
              <option
                disabled={false}
                value="CU"
              >
                Cuba
              </option>
              <option
                disabled={false}
                value="CW"
              >
                Curaçao
              </option>
              <option
                disabled={false}
                value="CY"
              >
                Cyprus
              </option>
              <option
                disabled={false}
                value="CZ"
              >
                Czech Republic
              </option>
              <option
                disabled={false}
                value="DK"
              >
                Denmark
              </option>
              <option
                disabled={false}
                value="DJ"
              >
                Djibouti
              </option>
              <option
                disabled={false}
                value="DM"
              >
                Dominica
              </option>
              <option
                disabled={false}
                value="DO"
              >
                Dominican Republic
              </option>
              <option
                disabled={false}
                value="EC"
              >
                Ecuador
              </option>
              <option
                disabled={false}
                value="EG"
              >
                Egypt
              </option>
              <option
                disabled={false}
                value="SV"
              >
                El Salvador
              </option>
              <option
                disabled={false}
                value="GQ"
              >
                Equatorial Guinea
              </option>
              <option
                disabled={false}
                value="ER"
              >
                Eritrea
              </option>
              <option
                disabled={false}
                value="EE"
              >
                Estonia
              </option>
              <option
                disabled={false}
                value="ET"
              >
                Ethiopia
              </option>
              <option
                disabled={false}
                value="FK"
              >
                Falkland Islands
              </option>
              <option
                disabled={false}
                value="FO"
              >
                Faroe Islands
              </option>
              <option
                disabled={false}
                value="FM"
              >
                Federated States of Micronesia
              </option>
              <option
                disabled={false}
                value="FJ"
              >
                Fiji
              </option>
              <option
                disabled={false}
                value="FI"
              >
                Finland
              </option>
              <option
                disabled={false}
                value="FR"
              >
                France
              </option>
              <option
                disabled={false}
                value="GF"
              >
                French Guiana
              </option>
              <option
                disabled={false}
                value="PF"
              >
                French Polynesia
              </option>
              <option
                disabled={false}
                value="GA"
              >
                Gabon
              </option>
              <option
                disabled={false}
                value="GM"
              >
                Gambia
              </option>
              <option
                disabled={false}
                value="GE"
              >
                Georgia
              </option>
              <option
                disabled={false}
                value="DE"
              >
                Germany
              </option>
              <option
                disabled={false}
                value="GH"
              >
                Ghana
              </option>
              <option
                disabled={false}
                value="GI"
              >
                Gibraltar
              </option>
              <option
                disabled={false}
                value="GR"
              >
                Greece
              </option>
              <option
                disabled={false}
                value="GL"
              >
                Greenland
              </option>
              <option
                disabled={false}
                value="GD"
              >
                Grenada
              </option>
              <option
                disabled={false}
                value="GP"
              >
                Guadeloupe
              </option>
              <option
                disabled={false}
                value="GU"
              >
                Guam
              </option>
              <option
                disabled={false}
                value="GT"
              >
                Guatemala
              </option>
              <option
                disabled={false}
                value="GG"
              >
                Guernsey
              </option>
              <option
                disabled={false}
                value="GN"
              >
                Guinea
              </option>
              <option
                disabled={false}
                value="GW"
              >
                Guinea-Bissau
              </option>
              <option
                disabled={false}
                value="GY"
              >
                Guyana
              </option>
              <option
                disabled={false}
                value="HT"
              >
                Haiti
              </option>
              <option
                disabled={false}
                value="VA"
              >
                Holy See (Vatican City State)
              </option>
              <option
                disabled={false}
                value="HN"
              >
                Honduras
              </option>
              <option
                disabled={false}
                value="HK"
              >
                Hong Kong
              </option>
              <option
                disabled={false}
                value="HU"
              >
                Hungary
              </option>
              <option
                disabled={false}
                value="IS"
              >
                Iceland
              </option>
              <option
                disabled={false}
                value="IN"
              >
                India
              </option>
              <option
                disabled={false}
                value="ID"
              >
                Indonesia
              </option>
              <option
                disabled={false}
                value="IR"
              >
                Iran
              </option>
              <option
                disabled={false}
                value="IQ"
              >
                Iraq
              </option>
              <option
                disabled={false}
                value="IE"
              >
                Ireland
              </option>
              <option
                disabled={false}
                value="IM"
              >
                Isle of Man
              </option>
              <option
                disabled={false}
                value="IL"
              >
                Israel
              </option>
              <option
                disabled={false}
                value="IT"
              >
                Italy
              </option>
              <option
                disabled={false}
                value="JM"
              >
                Jamaica
              </option>
              <option
                disabled={false}
                value="JP"
              >
                Japan
              </option>
              <option
                disabled={false}
                value="JE"
              >
                Jersey
              </option>
              <option
                disabled={false}
                value="JO"
              >
                Jordan
              </option>
              <option
                disabled={false}
                value="KZ"
              >
                Kazakhstan
              </option>
              <option
                disabled={false}
                value="KE"
              >
                Kenya
              </option>
              <option
                disabled={false}
                value="KI"
              >
                Kiribati
              </option>
              <option
                disabled={false}
                value="XK"
              >
                Kosovo
              </option>
              <option
                disabled={false}
                value="KW"
              >
                Kuwait
              </option>
              <option
                disabled={false}
                value="KG"
              >
                Kyrgyzstan
              </option>
              <option
                disabled={false}
                value="LA"
              >
                Laos
              </option>
              <option
                disabled={false}
                value="LV"
              >
                Latvia
              </option>
              <option
                disabled={false}
                value="LB"
              >
                Lebanon
              </option>
              <option
                disabled={false}
                value="LS"
              >
                Lesotho
              </option>
              <option
                disabled={false}
                value="LR"
              >
                Liberia
              </option>
              <option
                disabled={false}
                value="LY"
              >
                Libya
              </option>
              <option
                disabled={false}
                value="LI"
              >
                Liechtenstein
              </option>
              <option
                disabled={false}
                value="LT"
              >
                Lithuania
              </option>
              <option
                disabled={false}
                value="LU"
              >
                Luxembourg
              </option>
              <option
                disabled={false}
                value="MO"
              >
                Macao
              </option>
              <option
                disabled={false}
                value="MG"
              >
                Madagascar
              </option>
              <option
                disabled={false}
                value="MW"
              >
                Malawi
              </option>
              <option
                disabled={false}
                value="MY"
              >
                Malaysia
              </option>
              <option
                disabled={false}
                value="MV"
              >
                Maldives
              </option>
              <option
                disabled={false}
                value="ML"
              >
                Mali
              </option>
              <option
                disabled={false}
                value="MT"
              >
                Malta
              </option>
              <option
                disabled={false}
                value="MH"
              >
                Marshall Islands
              </option>
              <option
                disabled={false}
                value="MQ"
              >
                Martinique
              </option>
              <option
                disabled={false}
                value="MR"
              >
                Mauritania
              </option>
              <option
                disabled={false}
                value="MU"
              >
                Mauritius
              </option>
              <option
                disabled={false}
                value="YT"
              >
                Mayotte
              </option>
              <option
                disabled={false}
                value="MX"
              >
                Mexico
              </option>
              <option
                disabled={false}
                value="MD"
              >
                Moldova
              </option>
              <option
                disabled={false}
                value="MC"
              >
                Monaco
              </option>
              <option
                disabled={false}
                value="MN"
              >
                Mongolia
              </option>
              <option
                disabled={false}
                value="ME"
              >
                Montenegro
              </option>
              <option
                disabled={false}
                value="MS"
              >
                Montserrat
              </option>
              <option
                disabled={false}
                value="MA"
              >
                Morocco
              </option>
              <option
                disabled={false}
                value="MZ"
              >
                Mozambique
              </option>
              <option
                disabled={false}
                value="MM"
              >
                Myanmar
              </option>
              <option
                disabled={false}
                value="NA"
              >
                Namibia
              </option>
              <option
                disabled={false}
                value="NR"
              >
                Nauru
              </option>
              <option
                disabled={false}
                value="NP"
              >
                Nepal
              </option>
              <option
                disabled={false}
                value="NL"
              >
                Netherlands
              </option>
              <option
                disabled={false}
                value="NC"
              >
                New Caledonia
              </option>
              <option
                disabled={false}
                value="NZ"
              >
                New Zealand
              </option>
              <option
                disabled={false}
                value="NI"
              >
                Nicaragua
              </option>
              <option
                disabled={false}
                value="NE"
              >
                Niger
              </option>
              <option
                disabled={false}
                value="NG"
              >
                Nigeria
              </option>
              <option
                disabled={false}
                value="NU"
              >
                Niue
              </option>
              <option
                disabled={false}
                value="NF"
              >
                Norfolk Island
              </option>
              <option
                disabled={false}
                value="KP"
              >
                North Korea
              </option>
              <option
                disabled={false}
                value="MK"
              >
                North Macedonia
              </option>
              <option
                disabled={false}
                value="MP"
              >
                Northern Mariana Islands
              </option>
              <option
                disabled={false}
                value="NO"
              >
                Norway
              </option>
              <option
                disabled={false}
                value="OM"
              >
                Oman
              </option>
              <option
                disabled={false}
                value="PK"
              >
                Pakistan
              </option>
              <option
                disabled={false}
                value="PW"
              >
                Palau
              </option>
              <option
                disabled={false}
                value="PS"
              >
                Palestine
              </option>
              <option
                disabled={false}
                value="PA"
              >
                Panama
              </option>
              <option
                disabled={false}
                value="PG"
              >
                Papua New Guinea
              </option>
              <option
                disabled={false}
                value="PY"
              >
                Paraguay
              </option>
              <option
                disabled={false}
                value="PE"
              >
                Peru
              </option>
              <option
                disabled={false}
                value="PH"
              >
                Philippines
              </option>
              <option
                disabled={false}
                value="PL"
              >
                Poland
              </option>
              <option
                disabled={false}
                value="PT"
              >
                Portugal
              </option>
              <option
                disabled={false}
                value="PR"
              >
                Puerto Rico
              </option>
              <option
                disabled={false}
                value="QA"
              >
                Qatar
              </option>
              <option
                disabled={false}
                value="RE"
              >
                Reunion
              </option>
              <option
                disabled={false}
                value="RO"
              >
                Romania
              </option>
              <option
                disabled={false}
                value="RU"
              >
                Russia
              </option>
              <option
                disabled={false}
                value="RW"
              >
                Rwanda
              </option>
              <option
                disabled={false}
                value="BL"
              >
                Saint Barthélemy
              </option>
              <option
                disabled={false}
                value="SH"
              >
                Saint Helena
              </option>
              <option
                disabled={false}
                value="KN"
              >
                Saint Kitts and Nevis
              </option>
              <option
                disabled={false}
                value="LC"
              >
                Saint Lucia
              </option>
              <option
                disabled={false}
                value="MF"
              >
                Saint Martin (French Part)
              </option>
              <option
                disabled={false}
                value="PM"
              >
                Saint Pierre and Miquelon
              </option>
              <option
                disabled={false}
                value="VC"
              >
                Saint Vincent and the Grenadines
              </option>
              <option
                disabled={false}
                value="WS"
              >
                Samoa
              </option>
              <option
                disabled={false}
                value="SM"
              >
                San Marino
              </option>
              <option
                disabled={false}
                value="ST"
              >
                Sao Tome and Principe
              </option>
              <option
                disabled={false}
                value="SA"
              >
                Saudi Arabia
              </option>
              <option
                disabled={false}
                value="SN"
              >
                Senegal
              </option>
              <option
                disabled={false}
                value="RS"
              >
                Serbia
              </option>
              <option
                disabled={false}
                value="SC"
              >
                Seychelles
              </option>
              <option
                disabled={false}
                value="SL"
              >
                Sierra Leone
              </option>
              <option
                disabled={false}
                value="SG"
              >
                Singapore
              </option>
              <option
                disabled={false}
                value="SX"
              >
                Sint Maarten
              </option>
              <option
                disabled={false}
                value="SK"
              >
                Slovakia
              </option>
              <option
                disabled={false}
                value="SI"
              >
                Slovenia
              </option>
              <option
                disabled={false}
                value="SB"
              >
                Solomon Islands
              </option>
              <option
                disabled={false}
                value="SO"
              >
                Somalia
              </option>
              <option
                disabled={false}
                value="ZA"
              >
                South Africa
              </option>
              <option
                disabled={false}
                value="KR"
              >
                South Korea
              </option>
              <option
                disabled={false}
                value="SS"
              >
                South Sudan
              </option>
              <option
                disabled={false}
                value="ES"
              >
                Spain
              </option>
              <option
                disabled={false}
                value="LK"
              >
                Sri Lanka
              </option>
              <option
                disabled={false}
                value="SD"
              >
                Sudan
              </option>
              <option
                disabled={false}
                value="SR"
              >
                Suriname
              </option>
              <option
                disabled={false}
                value="SJ"
              >
                Svalbard and Jan Mayen
              </option>
              <option
                disabled={false}
                value="SZ"
              >
                Swaziland
              </option>
              <option
                disabled={false}
                value="SE"
              >
                Sweden
              </option>
              <option
                disabled={false}
                value="CH"
              >
                Switzerland
              </option>
              <option
                disabled={false}
                value="SY"
              >
                Syria
              </option>
              <option
                disabled={false}
                value="TW"
              >
                Taiwan
              </option>
              <option
                disabled={false}
                value="TJ"
              >
                Tajikistan
              </option>
              <option
                disabled={false}
                value="TZ"
              >
                Tanzania
              </option>
              <option
                disabled={false}
                value="TH"
              >
                Thailand
              </option>
              <option
                disabled={false}
                value="TL"
              >
                Timor-Leste
              </option>
              <option
                disabled={false}
                value="TG"
              >
                Togo
              </option>
              <option
                disabled={false}
                value="TK"
              >
                Tokelau
              </option>
              <option
                disabled={false}
                value="TO"
              >
                Tonga
              </option>
              <option
                disabled={false}
                value="TT"
              >
                Trinidad and Tobago
              </option>
              <option
                disabled={false}
                value="TA"
              >
                Tristan da Cunha
              </option>
              <option
                disabled={false}
                value="TN"
              >
                Tunisia
              </option>
              <option
                disabled={false}
                value="TR"
              >
                Turkey
              </option>
              <option
                disabled={false}
                value="TM"
              >
                Turkmenistan
              </option>
              <option
                disabled={false}
                value="TC"
              >
                Turks and Caicos Islands
              </option>
              <option
                disabled={false}
                value="TV"
              >
                Tuvalu
              </option>
              <option
                disabled={false}
                value="UG"
              >
                Uganda
              </option>
              <option
                disabled={false}
                value="UA"
              >
                Ukraine
              </option>
              <option
                disabled={false}
                value="AE"
              >
                United Arab Emirates
              </option>
              <option
                disabled={false}
                value="GB"
              >
                United Kingdom
              </option>
              <option
                disabled={false}
                value="US"
              >
                United States
              </option>
              <option
                disabled={false}
                value="UY"
              >
                Uruguay
              </option>
              <option
                disabled={false}
                value="UZ"
              >
                Uzbekistan
              </option>
              <option
                disabled={false}
                value="VU"
              >
                Vanuatu
              </option>
              <option
                disabled={false}
                value="VE"
              >
                Venezuela
              </option>
              <option
                disabled={false}
                value="VN"
              >
                Vietnam
              </option>
              <option
                disabled={false}
                value="VG"
              >
                Virgin Islands, British
              </option>
              <option
                disabled={false}
                value="VI"
              >
                Virgin Islands, U.S.
              </option>
              <option
                disabled={false}
                value="WF"
              >
                Wallis and Futuna
              </option>
              <option
                disabled={false}
                value="EH"
              >
                Western Sahara
              </option>
              <option
                disabled={false}
                value="YE"
              >
                Yemen
              </option>
              <option
                disabled={false}
                value="ZM"
              >
                Zambia
              </option>
              <option
                disabled={false}
                value="ZW"
              >
                Zimbabwe
              </option>
            </select>
            <div
              aria-hidden={true}
              className="PhoneInputCountryIcon"
            >
              <svg
                className="PhoneInputCountryIconImg"
                viewBox="0 0 75 50"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  International
                </title>
                <g
                  className="PhoneInputInternationalIconGlobe"
                  fill="none"
                  stroke="currentColor"
                  strokeMiterlimit="10"
                  strokeWidth="2"
                >
                  <path
                    d="M47.2,36.1C48.1,36,49,36,50,36c7.4,0,14,1.7,18.5,4.3"
                    strokeLinecap="round"
                  />
                  <path
                    d="M68.6,9.6C64.2,12.3,57.5,14,50,14c-7.4,0-14-1.7-18.5-4.3"
                  />
                  <line
                    x1="26"
                    x2="74"
                    y1="25"
                    y2="25"
                  />
                  <line
                    x1="50"
                    x2="50"
                    y1="1"
                    y2="49"
                  />
                  <path
                    d="M46.3,48.7c1.2,0.2,2.5,0.3,3.7,0.3c13.3,0,24-10.7,24-24S63.3,1,50,1S26,11.7,26,25c0,2,0.3,3.9,0.7,5.8"
                    strokeLinecap="round"
                  />
                  <path
                    d="M46.8,48.2c1,0.6,2.1,0.8,3.2,0.8c6.6,0,12-10.7,12-24S56.6,1,50,1S38,11.7,38,25c0,1.4,0.1,2.7,0.2,4c0,0.1,0,0.2,0,0.2"
                    strokeLinecap="round"
                  />
                </g>
                <path
                  className="PhoneInputInternationalIconPhone"
                  d="M12.4,17.9c2.9-2.9,5.4-4.8,0.3-11.2S4.1,5.2,1.3,8.1C-2,11.4,1.1,23.5,13.1,35.6s24.3,15.2,27.5,11.9c2.8-2.8,7.8-6.3,1.4-11.5s-8.3-2.6-11.2,0.3c-2,2-7.2-2.2-11.7-6.7S10.4,19.9,12.4,17.9z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </div>
            <div
              className="PhoneInputCountrySelectArrow"
            />
          </div>
          <input
            autoComplete="tel"
            className="PhoneInputInput"
            data-testid="phone_number"
            id="phone_number"
            name="phone_number"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="phoneNumber"
            required={true}
            type="tel"
            value=""
          />
        </div>
      </div>
      <button
        className="sc-AxmLO cAXkkm"
        data-testid="submit"
        disabled={false}
        type="submit"
      >
        send
      </button>
    </form>
  </div>
</div>
`;
